tests/sksl/errors/StructMemberReservedName.glsl
### Compilation failed:

error: 2: expected an identifier, but found type 'float'
    float float;
          ^^^^^
1 error
